--- a/main.tex
+++ b/main.tex
@@ -269,8 +269,8 @@ The Thesis Abstract is written here (and usually kept to just this page). The pa
 %\include{Chapters/Chapter1}
 \include{Chapters/Introduction}
 \include{Chapters/Background} 
-\include{Chapters/Design}
-%\include{Chapters/Implementation} 
+%\include{Chapters/Design}
+\include{Chapters/Implementation} 
 \include{Chapters/StrengthOfSecurity}
 \include{Chapters/Results}
 \include{Chapters/CriticalEvaluation}
