--- a/MastersDoctoralThesis.cls
+++ b/MastersDoctoralThesis.cls
@@ -392,7 +392,7 @@ KOMA-script documentation for details.}]{fancyhdr}
 
 %----------------------------------------------------------------------------------------
 
-\ifbool{hyperrefsupport}{% If the nohyperref class option has not been specified
+%\ifbool{hyperrefsupport}{% If the nohyperref class option has not been specified
 \AfterPackage{biblatex}{ % Load the hyperref package after the biblatex package for compatibility 
 \RequirePackage{hyperref} % Required for customising links and the PDF
 \hypersetup{pdfpagemode={UseOutlines},
@@ -400,7 +400,7 @@ bookmarksopen=true,
 bookmarksopenlevel=0,
 hypertexnames=false,
 colorlinks=true, % Set to false to disable coloring links
-citecolor=magenta, % The color of citations
+citecolor=black, % The color of citations
 linkcolor=black, % The color of references to document elements (sections, figures, etc)
 urlcolor=black, % The color of hyperlinks (URLs)
 pdfstartview={FitV},
@@ -410,7 +410,7 @@ breaklinks=true,
 
 \pdfstringdefDisableCommands{% If there is an explicit linebreak in a section heading (or anything printed to the pdf-bookmarks), it is replaced by a space
    \let\\\space%
-}
+%}
 }
 }{%nothing
 }
