--- a/main.tex
+++ b/main.tex
@@ -269,7 +269,7 @@ The Thesis Abstract is written here (and usually kept to just this page). The pa
 %\include{Chapters/Chapter1}
 \include{Chapters/Introduction}
 \include{Chapters/Background} 
-%\include{Chapters/Design}
+\include{Chapters/Design}
 \include{Chapters/Implementation} 
 \include{Chapters/StrengthOfSecurity}
 \include{Chapters/Results}
