--- a/example.bib
+++ b/example.bib
@@ -11,6 +11,15 @@
 	Url = {http://link.aip.org/link/?RSI/72/4477/1},
 	Year = {2001}}
 
+@misc{50milby2020,
+	website = {telegraph.co.uk},
+	author = {Matt Warman}, 
+	title = {50 billion devices online by 2020},
+	month = {January},
+	year = {2012},
+	url ={http://www.telegraph.co.uk/technology/internet/9051590/50-billion-devices-online-by-2020.html}
+}
+
 @misc{hackingsum,
 	website = {alphr.com},
       	author = {Nicole Kobie},
@@ -46,3 +55,13 @@
       	year = {2014},
       	url = {http://www.autoblog.com/2014/07/18/tesla-model-s-successfully-hacked-by-zhejiang-university-team/}
 }
+
+@misc{which,
+	website={which.co.uk},
+	author = {Which},
+	title = {Which? probe uncovers Hive heating app data risk},
+	month = {August},
+	year = {2015}
+	url = {http://www.which.co.uk/news/2015/08/which-probe-uncovers-hive-heating-app-data-risk-407275/}
+}
+
