--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,8 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+
+
 %----------------------------------------------------------------------------------------
 %	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
 %----------------------------------------------------------------------------------------
@@ -48,6 +50,80 @@ headsepline, % Uncomment to get a line under the header
 \bibliography{example}
 
 %\usepackage[autostyle=true]{csquotes} % Required to generate language-dependent quotes in the bibliography
+
+%----------------------------------------------------------------------------------------
+%    CODE LISTING SETTINGS
+%----------------------------------------------------------------------------------------
+
+\usepackage{float}
+\usepackage{listings}
+\usepackage{color}
+
+\usepackage{typearea}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage{mwe} 
+\usepackage{etoolbox}  
+
+\definecolor{dkgreen}{rgb}{0,0.6,0}
+\definecolor{gray}{rgb}{0.5,0.5,0.5}
+\definecolor{mauve}{rgb}{0.58,0,0.82}
+\definecolor{myorange}{rgb}{0.8,0.4,0}
+\definecolor{myblue}{rgb}{0.01,0.61,0.98}
+
+\lstset{frame=tb,
+  language=C,
+  aboveskip=3mm,
+  belowskip=3mm,
+  showstringspaces=false,
+  columns=flexible,
+  basicstyle={\small\ttfamily},
+  morekeywords={HEX}
+  numbers=left,
+  numberstyle=\tiny\color{gray},
+  keywordstyle=\color{myorange},
+  commentstyle=\color{dkgreen},
+  stringstyle=\color{mauve},
+  breaklines=true,
+  breakatwhitespace=true,
+  tabsize=3,
+  stringstyle=\color{myblue},
+  emphstyle=\bfseries\color{myorange}
+}
+
+\lstdefinestyle{Arduino}{%
+    %style=FormattedNumber,
+    keywords={println, print, for, OneWire,select,write,delay, reset},%                 define keywords
+    morecomment=[l]{//},%             treat // as comments
+    morecomment=[s]{/*}{*/},%         define /* ... */ comments
+    emph={HIGH, OUTPUT, LOW, setup, loop, Serial},%        keywords to emphasize
+}
+
+\lstdefinestyle{FormattedNumber}{%
+    literate=*{0}{{\FormatDigit{0}}}{1}%
+             {1}{{\FormatDigit{1}}}{1}%
+             {2}{{\FormatDigit{2}}}{1}%
+             {3}{{\FormatDigit{3}}}{1}%
+             {4}{{\FormatDigit{4}}}{1}%
+             {5}{{\FormatDigit{5}}}{1}%
+             {6}{{\FormatDigit{6}}}{1}%
+             {7}{{\FormatDigit{7}}}{1}%
+             {8}{{\FormatDigit{8}}}{1}%
+             {9}{{\FormatDigit{9}}}{1}%
+             {.0}{{\FormatDigit{.0}}}{2}% Following is to ensure that only periods
+             {.1}{{\FormatDigit{.1}}}{2}% followed by a digit are changed.
+             {.2}{{\FormatDigit{.2}}}{2}%
+             {.3}{{\FormatDigit{.3}}}{2}%
+             {.4}{{\FormatDigit{.4}}}{2}%
+             {.5}{{\FormatDigit{.5}}}{2}%
+             {.6}{{\FormatDigit{.6}}}{2}%
+             {.7}{{\FormatDigit{.7}}}{2}%
+             {.8}{{\FormatDigit{.8}}}{2}%
+             {.9}{{\FormatDigit{.9}}}{2}%
+             %{,}{{\FormatDigit{,}}{1}% depends if you want the "," in color
+             {\ }{{ }}{1}% handle the space
+             ,%
+}
 
 %----------------------------------------------------------------------------------------
 %	MARGIN SETTINGS
@@ -269,6 +345,7 @@ The Thesis Abstract is written here (and usually kept to just this page). The pa
 
 %\include{Chapters/Chapter1}
 \include{Chapters/Introduction}
+%\include{Project Planning}
 \include{Chapters/Background} 
 \include{Chapters/Design}
 \include{Chapters/Implementation} 
