tortoisegit decided not to include things

--- a/example.bib
+++ b/example.bib
@@ -65,3 +65,11 @@
 	url = {http://www.which.co.uk/news/2015/08/which-probe-uncovers-hive-heating-app-data-risk-407275/}
 }
 
+@misc{ian,
+	website = {github.com},
+	author = {Ian Preston},
+	title = {tweetnacl-java},
+	month = {February},
+	year = {2016},
+	url={https://github.com/ianopolous/tweetnacl-java}
+	}
