added more to results and crit eval. 1500 words left

--- a/main.tex
+++ b/main.tex
@@ -96,7 +96,7 @@ headsepline, % Uncomment to get a line under the header
 
 \lstdefinestyle{Arduino}{%
     %style=FormattedNumber,
-    keywords={println, print, for, OneWire,select,write,delay, reset, byte, char, const, long, unsigned, stop},%                 define keywords
+    keywords={println, print, for, OneWire,select,write,delay, reset, byte, char, const, long, unsigned, stop, available, read, if, else},%                 define keywords
     morecomment=[l]{//},%             treat // as comments
     morecomment=[s]{/*}{*/},%         define /* ... */ comments
     emph={HIGH, OUTPUT, LOW, setup, loop, Serial},%        keywords to emphasize
