conclusion done, 800 words

--- a/example.bib
+++ b/example.bib
@@ -73,3 +73,12 @@
 	year = {2016},
 	url={https://github.com/ianopolous/tweetnacl-java}
 	}
+	
+@misc{cameras,
+	website = {censys.io},
+	author = {Zakir Durumeric, David Adrian, Ariana Mirian, Michael Bailey, J. Alex Halderman}
+	 title = {A Search Engine Backed by {I}nternet-Wide Scanning},
+        booktitle = {Proceedings of the 22nd ACM Conference on Computer and Communications Security},
+        month = oct,
+        year = 2015
+ }
