checking it over

--- a/example.bib
+++ b/example.bib
@@ -61,8 +61,38 @@
 	author = {Which},
 	title = {Which? probe uncovers Hive heating app data risk},
 	month = {August},
-	year = {2015}
+	year = {2015},
 	url = {http://www.which.co.uk/news/2015/08/which-probe-uncovers-hive-heating-app-data-risk-407275/}
+}
+
+@misc{naclsmall,
+	website = {labs.opendns.com},
+	author = {Frank Denis},
+	title = {Introducing Sodium, a new cryptographic library},
+	month = {March},
+	year = {2013},
+	url = {https://labs.opendns.com/2013/03/06/announcing-sodium-a-new-cryptographic-library/}
+}
+
+@article{tweetnacl,
+	author = {Daniel J. Bernstein, Bernard van Gastel, Wesley Janssen, Tanja Lange, Peter Schwabe,
+and Sjaak Smetsers},
+	title = {TweetNaCl: A crypto library in 100 tweets},
+	year = {2014},
+	pages = {3}
+}
+
+@article{tweetnac3l,
+	author = {Daniel J. Bernstein, Bernard van Gastel, Wesley Janssen, Tanja Lange, Peter Schwabe,
+and Sjaak Smetsers},
+	title = {TweetNaCl: A crypto library in 100 tweets},
+	year = {2014}
+}
+
+@misc{arduinopseudo,
+	website = {arduino.cc},
+	author = Arduino},
+	url = {https://www.arduino.cc/en/Reference/Random}
 }
 
 @misc{ian,
