looked over intro and background. Added more explanation about how nacl does what it does. 200 words

--- a/example.bib
+++ b/example.bib
@@ -95,6 +95,41 @@ and Sjaak Smetsers},
 	url = {https://www.arduino.cc/en/Reference/Random}
 }
 
+@misc{curve
+	website = {cr.yp.to},
+	author = {Daniel J. Bernstein},
+	title = {A state-of-the-art Diffie-Hellman function},
+	url = {https://cr.yp.to/ecdh.html}
+}
+
+@misc{salsa,
+	website = {cr.yp.to},
+	author = {Daniel J. Bernstein},
+	title = {Snuffle 2005: the Salsa20 encryption function},
+	url = {https://cr.yp.to/snuffle.html}
+}
+
+@misc{poly,
+	website = {cr.yp.to},
+	author = {Daniel J. Bernstein},
+	title = {A state-of-the-art message-authentication code},
+	url = {http://cr.yp.to/mac.html}
+}
+
+@misc{ed25,
+	website = {http://ed25519.cr.yp.to},
+	author = {Daniel J. Bernstein, Niels Duif, Tanja Lange, Peter Schwabe, Bo-Yin Yan},
+	title = {A state-of-the-art message-authentication code},
+	url = {http://ed25519.cr.yp.to/index.html}
+}
+
+@book{dipbag
+	author = {Boleslaw A. Boczek},
+	title = {Internation Law: A Dictionary},
+	publisher = {Scarecrow Press INC},
+	year = {2005}
+}
+
 @misc{ian,
 	website = {github.com},
 	author = {Ian Preston},
