--- a/example.bib
+++ b/example.bib
@@ -130,6 +130,13 @@ and Sjaak Smetsers},
 	year = {2005}
 }
 
+@misc{dsdatasheet,
+	author = {Maxim Integrated},
+	title = {High-Precision 1-Wire Digital Thermometer},
+	year = {2015},
+	url ={datasheets.maximintegrated.com/en/ds/DS18S20.pdf}
+	}
+
 @misc{ian,
 	website = {github.com},
 	author = {Ian Preston},
@@ -139,6 +146,12 @@ and Sjaak Smetsers},
 	url={https://github.com/ianopolous/tweetnacl-java}
 	}
 	
+@misc{eth2,
+	website = {labs.arduino.org},
+	author = {Arduino},
+	url = {http://labs.arduino.org/Ethernet+2+Library}
+}
+
 @misc{cameras,
 	website = {censys.io},
 	author = {Zakir Durumeric, David Adrian, Ariana Mirian, Michael Bailey, J. Alex Halderman}
