final report atm

--- a/example.bib
+++ b/example.bib
@@ -75,15 +75,15 @@
 }
 
 @article{tweetnacl,
-	author = {Daniel J. Bernstein, Bernard van Gastel, Wesley Janssen, Tanja Lange, Peter Schwabe,
+	author = {Daniel J. Bernstein and Bernard van Gastel and Wesley Janssen and Tanja Lange and Peter Schwabe
 and Sjaak Smetsers},
 	title = {TweetNaCl: A crypto library in 100 tweets},
 	year = {2014},
 	pages = {3}
 }
 
-@article{tweetnac3l,
-	author = {Daniel J. Bernstein, Bernard van Gastel, Wesley Janssen, Tanja Lange, Peter Schwabe,
+@article{tweetnacl3,
+	author = {Daniel J. Bernstein and Bernard van Gastel and Wesley Janssen and Tanja Lange and Peter Schwabe
 and Sjaak Smetsers},
 	title = {TweetNaCl: A crypto library in 100 tweets},
 	year = {2014}
@@ -91,11 +91,11 @@ and Sjaak Smetsers},
 
 @misc{arduinopseudo,
 	website = {arduino.cc},
-	author = Arduino},
+	author = {Arduino},
 	url = {https://www.arduino.cc/en/Reference/Random}
 }
 
-@misc{curve
+@misc{curve,
 	website = {cr.yp.to},
 	author = {Daniel J. Bernstein},
 	title = {A state-of-the-art Diffie-Hellman function},
@@ -118,12 +118,12 @@ and Sjaak Smetsers},
 
 @misc{ed25,
 	website = {http://ed25519.cr.yp.to},
-	author = {Daniel J. Bernstein, Niels Duif, Tanja Lange, Peter Schwabe, Bo-Yin Yan},
+	author = {Daniel J. Bernstein and Niels Duif and Tanja Lange and Peter Schwabe, Bo-Yin Yan},
 	title = {A state-of-the-art message-authentication code},
 	url = {http://ed25519.cr.yp.to/index.html}
 }
 
-@book{dipbag
+@book{dipbag,
 	author = {Boleslaw A. Boczek},
 	title = {Internation Law: A Dictionary},
 	publisher = {Scarecrow Press INC},
@@ -152,11 +152,22 @@ and Sjaak Smetsers},
 	url = {http://labs.arduino.org/Ethernet+2+Library}
 }
 
-@misc{cameras,
+@misc{signencrypt,
+	website = {http://world.std.com},
+	author = {Don Davis},
+	title = {Defective Sign \& Encrypt in S/MIME,
+PKCS\#7, MOSS, PEM, PGP, and XML },
+	month = {May},
+	year = {2001},
+	url = {http://world.std.com/\~dtd/sign\_encrypt/sign\_encrypt7.html}
+}
+
+@misc{censys,
 	website = {censys.io},
-	author = {Zakir Durumeric, David Adrian, Ariana Mirian, Michael Bailey, J. Alex Halderman}
+	author = {Zakir Durumeric and David Adrian and Ariana Mirian and Michael Bailey and J. Alex Halderman},
 	 title = {A Search Engine Backed by {I}nternet-Wide Scanning},
         booktitle = {Proceedings of the 22nd ACM Conference on Computer and Communications Security},
-        month = oct,
-        year = 2015
+        month = {Oct},
+        year = {2015},
+        url = {https://censys.io}
  }
