--- a/example.bib
+++ b/example.bib
@@ -152,6 +152,13 @@ and Sjaak Smetsers},
 	url = {http://labs.arduino.org/Ethernet+2+Library}
 }
 
+@misc{jdbc,
+	website={dev.mysql.com},
+	author={MySQL},
+	title={Download Connector/J},
+	url={https://dev.mysql.com/downloads/connector/j/}
+	}
+
 @misc{signencrypt,
 	website = {http://world.std.com},
 	author = {Don Davis},
