--- a/main.tex
+++ b/main.tex
@@ -114,7 +114,7 @@ headsepline, % Uncomment to get a line under the header
 
 \lstdefinestyle{Arduino}{%
     %style=FormattedNumber,
-    keywords={println, print, for, OneWire,select,write,delay, reset, byte, char, const, long, unsigned, stop, available, read, if, else,int},%                 define keywords
+    keywords={println, print, for, OneWire,select,write,delay, reset, byte, char, const, long, unsigned, stop, available, read, if, else,int, String},%                 define keywords
     morecomment=[l]{//},%             treat // as comments
     morecomment=[s]{/*}{*/},%         define /* ... */ comments
     emph={HIGH, OUTPUT, LOW, setup, loop, Serial},%        keywords to emphasize
