oh yeah..acknowledgements...

--- a/main.tex
+++ b/main.tex
@@ -306,12 +306,12 @@ This report aims to explain how to build a sensor platform that can transmit dat
 %	ACKNOWLEDGEMENTS
 %----------------------------------------------------------------------------------------
 
-%\begin{acknowledgements}
-%\addchaptertocentry{\acknowledgementname} % Add the acknowledgements to the table of contents
+\begin{acknowledgements}
+\addchaptertocentry{\acknowledgementname} % Add the acknowledgements to the table of contents
 
-%The acknowledgments and the people to thank go here, don't forget to include your project advisor\ldots
+Over the course of this project I was helped on more than one occasion. I would like to give thanks to my project supervisor, Dr. James Irvine and Grieg Paul, a PhD student who help was very useful throughout.
 
-%\end{acknowledgements}
+\end{acknowledgements}
 
 %----------------------------------------------------------------------------------------
 %	LIST OF CONTENTS/FIGURES/TABLES PAGES
